--- a/SetViewPort/SetViewPort/SetViewPort.csproj
+++ b/SetViewPort/SetViewPort/SetViewPort.csproj
@@ -75,6 +75,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UtilityClass">
+      <HintPath>..\..\UtilityClass\bin\Debug\UtilityClass.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
